overflow-x hidden to avoid bgd streching because of animation objects

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,7 @@
 html {
   // scroll-snap-type: y mandatory;
   // scroll-behavior: smooth;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 * {
@@ -28,6 +28,7 @@ body {
     display: block;
     height: 100svh;
     overflow-y: auto;
+    overflow-x: hidden;
     // overscroll-behavior-y: auto;
   }
 
@@ -43,6 +44,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 100px;
+    
     
 
     section {
